--- a/app/code/Magento/Payment/composer.json
+++ b/app/code/Magento/Payment/composer.json
@@ -9,9 +9,9 @@
     "config": {
         "sort-packages": true
     },
-    "version": "100.4.5",
+    "version": "100.4.6",
     "require": {
-        "php": "~7.4.0||~8.1.0",
+        "php": "~8.1.0||~8.2.0",
         "magento/framework": "103.0.*",
         "magento/module-checkout": "100.4.*",
         "magento/module-config": "101.2.*",
@@ -19,7 +19,8 @@
         "magento/module-quote": "101.2.*",
         "magento/module-sales": "103.0.*",
         "magento/module-store": "101.1.*",
-        "magento/module-ui": "101.2.*"
+        "magento/module-ui": "101.2.*",
+        "magento/module-vault": "101.2.*"
     },
     "autoload": {
         "files": [
